<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_automatic_swipe"
        android:title="@string/pref_automatic_swipe" />
    <EditTextPreference
        android:defaultValue="5"
        android:inputType="number"
        android:key="pref_timeout"
        android:numeric="integer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_timeout" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_all_or_favorites"
        android:title="@string/pref_all_or_favorites" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_random"
        android:title="@string/pref_random" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_change_animation"
        android:title="@string/pref_change_animation" />

</PreferenceScreen>
